crates/harness-testkit/tests/snapshots/pty_e2e__pty_operator_sidebar_primary.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&sidebar_screen,\n&[\"historical answer\", LIVE_OPERATOR_TODOS_MARKER, OPERATOR_FILES_MARKER,\n\"demo.txt\", \"ready for next turn\",], &sidebar_visual,)"
---
historical answer: true
0 active todos: true
Modified Files: true
demo.txt: true
ready for next turn: true
focus_marker: Modified Files
focus_pixels_blake3: 1b81464ebf2da2aae4598cf05849227170191c22aae2fd86315328e769f504c5
focus_region_cells: row=6, col=117, height=6, width=16
image: pty_operator_sidebar_primary.png
manifest_json: pty-manifests/operator_sidebar/manifest.json
manifest_jsonl: pty-manifests/operator_sidebar/manifest.jsonl
size_px: 2560x1440
