crates/harness-testkit/tests/snapshots/pty_e2e__pty_permission_overlay_parity.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&stable_screen,\n&[LIVE_STATE_FIXTURES.permission.marker, \"FAIL CLOSED\", \"SESSION PAUSED\",\nLIVE_STATE_FIXTURES.permission.draft_text,], &permission_visual,)"
---
Permission Requested: true
FAIL CLOSED: true
SESSION PAUSED: true
keep this draft: true
focus_marker: Permission Requested
focus_pixels_blake3: e8fbc2aba3d569f7c4a4d2b8b0704e4faf40cda7013891cd56b0f54f0467105f
focus_region_cells: row=7, col=13, height=1, width=24
image: pty_permission_overlay_parity.png
manifest_json: pty-manifests/permission/manifest.json
manifest_jsonl: pty-manifests/permission/manifest.jsonl
size_px: 1280x720
