crates/harness-testkit/tests/snapshots/pty_e2e__pty_permission_requested.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&permission_checkpoint,\nLIVE_STATE_FIXTURES.permission.snapshot_markers, &permission_visual)"
---
Permission Requested: true
keep this draft: true
Composer: true
focus_marker: Permission Requested
focus_pixels_blake3: 880a4bbc2e3336e5b343ebd5008058c85a32fd61ea58dcfd1aadc684748d21e5
focus_region_cells: row=8, col=19, height=1, width=24
image: pty_permission_requested.png
size_px: 2560x1440
