crates/harness-testkit/tests/snapshots/pty_e2e__pty_post_run_quarter_tile.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
assertion_line: 1070
expression: "checkpoint_visual_snapshot(&post_run_screen, POST_RUN_HANDOFF_MARKERS,\n&post_run_visual)"
---
Next action: true
Continue this session: true
Replay this run: true
Start another session: true
focus_marker: Next action
focus_pixels_blake3: 0df226238e21ae118bf65275b0bb22f4f5ca2792da3b2eec19ef7d8e2ab881d0
focus_region_cells: row=5, col=5, height=6, width=28
image: pty_post_run_quarter_tile.png
size_px: 1280x720
