crates/harness-testkit/tests/snapshots/pty_e2e__pty_replay_diff_six_window.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&diff_screen,\n&[STRUCTURED_DIFF_FILE_MARKER, STRUCTURED_DIFF_REMOVED_LINE_MARKER,\nSTRUCTURED_DIFF_ADDED_LINE_MARKER, REPLAY_DENSE_READY_MARKER,], &diff_visual,)"
---
--- demo.txt: true
-beta: true
+BETA: true
Replay · read-only: true
focus_marker: --- demo.txt
focus_pixels_blake3: 1aa5cbf803a2c0dc5547fdc8adcabfffb75e44d28bb3b3ab6d7fa19ed617c498
focus_region_cells: row=2, col=20, height=6, width=18
image: pty_replay_diff_six_window.png
manifest_json: pty-manifests/diff_surface/manifest.json
manifest_jsonl: pty-manifests/diff_surface/manifest.jsonl
size_px: 960x540
